--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,10 @@ h2 {
     display: inline-block;
     margin-right: 10px;
 }
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0px;
+    
+}
